--- a/is-with-analytics/is-with-analytics.yaml
+++ b/is-with-analytics/is-with-analytics.yaml
@@ -712,6 +712,7 @@ Resources:
           export PATH=~/.local/bin:$PATH
           exec > >(tee /var/log/user-data.log|logger -t user-data -s 2>/dev/console) 2>&1
           if [[ ${OperatingSystem} == "Ubuntu1804" ]]; then
+              export DEBIAN_FRONTEND=noninteractive
               apt-get update
               apt install -y puppet nfs-common
               apt install -y python-pip
@@ -883,6 +884,7 @@ Resources:
           exec > >(tee /var/log/user-data.log|logger -t user-data -s 2>/dev/console) 2>&1
           export PATH=~/.local/bin:$PATH
           if [[ ${OperatingSystem} == "Ubuntu1804" ]]; then
+              export DEBIAN_FRONTEND=noninteractive
               apt-get update
               apt install -y puppet nfs-common
               apt install -y python-pip
@@ -1212,6 +1214,7 @@ Resources:
           exec > >(tee /var/log/user-data.log|logger -t user-data -s 2>/dev/console) 2>&1
           export PATH=~/.local/bin:$PATH
           if [[ ${OperatingSystem} == "Ubuntu1804" ]]; then
+              export DEBIAN_FRONTEND=noninteractive
               apt-get update
               apt install -y puppet nfs-common
               apt install -y python-pip
@@ -1316,6 +1319,7 @@ Resources:
           exec > >(tee /var/log/user-data.log|logger -t user-data -s 2>/dev/console) 2>&1
           export PATH=~/.local/bin:$PATH
           if [[ ${OperatingSystem} == "Ubuntu1804" ]]; then
+              export DEBIAN_FRONTEND=noninteractive
               apt-get update
               apt install -y puppet nfs-common
               apt install -y python-pip
