--- a/is-with-analytics/is-with-analytics.yaml
+++ b/is-with-analytics/is-with-analytics.yaml
@@ -1268,7 +1268,7 @@ Resources:
           Value: WSO2ISAnalyticsWorker
           PropagateAtLaunch: 'true'
         - Key: cluster
-          Value: ei-analytics
+          Value: is-analytics
           PropagateAtLaunch: 'true'
     CreationPolicy:
       ResourceSignal:
@@ -1376,7 +1376,7 @@ Resources:
           Value: WSO2ISAnalyticsDashboard
           PropagateAtLaunch: 'true'
         - Key: cluster
-          Value: ei-analytics
+          Value: is-analytics
           PropagateAtLaunch: 'true'
     CreationPolicy:
       ResourceSignal:
