--- a/Minimum-HA/scalable-is.yaml
+++ b/Minimum-HA/scalable-is.yaml
@@ -28,8 +28,6 @@ Metadata:
           - CertificateName
           - DBUsername
           - DBPassword
-          - WUMUsername
-          - WUMPassword
       - Label:
           default: Advanced Configuration
         Parameters:
@@ -68,10 +66,6 @@ Metadata:
         default: Enable Test Mode
       CustomUserData:
         default: Customer User Data
-      WUMUsername:
-        default: WSO2 Username
-      WUMPassword:
-        default: WSO2 Password
       WSO2InstanceType:
         default: Instance Type
       DB:
@@ -430,7 +424,7 @@ Resources:
             - sed -i '/\[master\]/a autosign=true' /etc/puppet/puppet.conf
             - service puppetmaster restart
             - cd /home/ubuntu
-            - !Sub "./wso2-init.sh '${WUMUsername}' '${WUMPassword}' wso2is-5.9.0 '${InternalPrepareForTest}'"
+            - !Sub "./wso2-init.sh wso2is-5.9.0"
             - !Sub "/usr/local/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource PuppetMaster --region ${AWS::Region}"
             - !Join
               - ''
@@ -1073,13 +1067,6 @@ Parameters:
   ElasticSearchEndpoint:
     Type: String
     Default: ""
-  WUMPassword:
-    Type: String
-    Default: ""
-    NoEcho: true
-  WUMUsername:
-    Type: String
-    Default: ""
   DBUsername:
     Type: String
     MinLength: 4
@@ -1136,17 +1123,17 @@ Parameters:
 Mappings:
   WSO2PuppetMasterRegionMap:
     ap-southeast-2:
-      Ubuntu1804: ami-05d7dd19f55192eaa
+      Ubuntu1804: ami-04fc310cc18d58430
     eu-west-1:
-      Ubuntu1804: ami-0b020d57cd13fe860
+      Ubuntu1804: ami-00858b3432143b33a
     us-east-1:
-      Ubuntu1804: ami-01cc5ffe6c88ebc23
+      Ubuntu1804: ami-04c83ed0f2bc0dec0
     us-east-2:
-      Ubuntu1804: ami-02f90092c2119e421
+      Ubuntu1804: ami-0ab13e07d8a053439
     us-west-1:
-      Ubuntu1804: ami-07a0f472a57807626
+      Ubuntu1804: ami-0662ca84c320f7576
     us-west-2:
-      Ubuntu1804: ami-01cfc5c925a6d263a
+      Ubuntu1804: ami-03b028ffbaacc6ea0
   WSO2ISAMIRegionMap:
     ap-southeast-2:
       CentOS7: ami-0211f0ecd0e693937
